feat: update menu items styles

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -225,3 +225,41 @@ diagram-letter {
   font-size: 11px;
   text-transform: uppercase;
 }
+/* Custom style for menu items. We're reducing the font-size with each nested level. */
+.menu__list > .menu__list-item > .menu__link {
+  -webkit-font-smoothing: antialiased;
+  font-size: 1em;
+  font-weight: 700;
+}
+.menu__list > .menu__list-item >
+.menu__list > .menu__list-item > .menu__link {
+  -webkit-font-smoothing: antialiased;
+  font-size: 15.2px;
+  font-weight: 400;
+}
+.menu__list > .menu__list-item >
+.menu__list > .menu__list-item >
+.menu__list > .menu__list-item > .menu__link {
+  -webkit-font-smoothing: antialiased;
+  font-size: 14.44px;
+  font-weight: 400;
+}
+.menu__list > .menu__list-item >
+.menu__list > .menu__list-item >
+.menu__list > .menu__list-item >
+.menu__list > .menu__list-item > .menu__link {
+  -webkit-font-smoothing: antialiased;
+  font-size: 13.71px;
+  font-weight: 400;
+  letter-spacing: 0.025em;
+}
+.menu__list > .menu__list-item >
+.menu__list > .menu__list-item >
+.menu__list > .menu__list-item >
+.menu__list > .menu__list-item >
+.menu__list > .menu__list-item > .menu__link {
+  -webkit-font-smoothing: antialiased;
+  font-size: 13.21px;
+  font-weight: 400;
+  letter-spacing: 0.025em;
+}
