fix: tweak sidebar and headings styles

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,5 +1,6 @@
 /* your custom css */
 @import "~react-image-lightbox/style.css";
+/* your custom css */
 
 .hidden {
   display: none;
@@ -211,6 +212,19 @@ a code {
   font-size: 0.85em;
 }
 
+/* There's no way to override h1 class; this is the only way to write a selector for it. */
+[class^="docTitle"] {
+  font-size: 2.2rem !important;
+}
+
+.markdown h2 {
+  font-size: 1.5rem;
+}
+
+.markdown h3 {
+  font-size: 1rem;
+}
+
 diagram-letter {
   display: inline-flex;
   align-items: center;
@@ -225,4 +239,16 @@ diagram-letter {
   font-weight: bolder;
   font-size: 11px;
   text-transform: uppercase;
+}
+
+/* Custom style for menu items. */
+.menu__list > .menu__list-item > .menu__link {
+  -webkit-font-smoothing: antialiased;
+  font-size: 1em;
+  font-weight: var(--ifm-font-weight-semibold);
+}
+.menu__list > .menu__list-item > .menu__list > .menu__list-item > .menu__link {
+  -webkit-font-smoothing: antialiased;
+  font-size: 15.2px;
+  font-weight: 400;
 }
