fix: adjust font size

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -217,11 +217,15 @@ a code {
 }
 
 .markdown h2 {
-  font-size: 1.55rem;
+  font-size: 1.6rem;
 }
 
 .markdown h3 {
   font-size: 1.3rem;
+}
+
+.markdown h4 {
+  font-size: 1.1rem;
 }
 
 diagram-letter {
