chore: update 5.21.0 changelog

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -251,3 +251,16 @@ diagram-letter {
   font-size: 15.2px;
   font-weight: 400;
 }
+
+.webiny-gallery {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-top: 20px;
+}
+
+.webiny-gallery-image {
+  padding: 0 20px;
+  flex-basis: 33%;
+  max-width: 300px;
+}
