chore: restructure repository to eliminate monorepo setup

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -241,6 +241,11 @@ diagram-letter {
 }
 
 /* Custom style for menu items. */
+.theme-doc-sidebar-item-category-level-2 a.menu__link.menu__link--sublist {
+  font-size: 15.2px;
+  font-weight: 400;
+}
+
 .menu__list > .menu__list-item > .menu__link {
   -webkit-font-smoothing: antialiased;
   font-size: 1em;
