fix: run prettier for all the files

--- a/src/css/prism.css
+++ b/src/css/prism.css
@@ -83,15 +83,15 @@
   @apply bg-rose-500/[0.15] border-rose-400 before:content-['-'] before:text-rose-400;
 }
 
-code[class*='language-'],
-pre[class*='language-'] {
+code[class*="language-"],
+pre[class*="language-"] {
   @apply bg-[#2B2D52] text-[#94D8FF];
 }
 
-pre[class^='language-diff-'] {
+pre[class^="language-diff-"] {
   @apply flex px-4 py-[1.625rem] lg:p-8;
 }
 
-pre[class^='language-diff-'] > code {
+pre[class^="language-diff-"] > code {
   @apply flex-none min-w-full;
 }
