--- a/src/css/base.css
+++ b/src/css/base.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  font-feature-settings: 'cv02', 'cv03', 'cv04', 'cv11';
+  font-feature-settings: "cv02", "cv03", "cv04", "cv11";
 }
 
 abbr[title] {
