--- a/src/css/docsearch.css
+++ b/src/css/docsearch.css
@@ -29,12 +29,12 @@
   display: flex;
   flex-direction: column;
   min-height: 0;
-  box-shadow: theme('boxShadow.lg');
+  box-shadow: theme("boxShadow.lg");
   background: white;
   @apply w-full max-w-none lg:max-w-[100%] mt-[2rem] lg:mt-6 border-r-0 shadow-none rounded-b-lg lg:rounded-lg overflow-hidden;
 
   .dark & {
-    background: theme('colors.dark-grey-2');
+    background: theme("colors.dark-grey-2");
     box-shadow: inset 0 1px 0 0 rgb(255 255 255 / 0.05);
   }
 }
@@ -66,13 +66,13 @@
 }
 
 .DocSearch-Hit--Result.DocSearch-Hit--Child::before {
-  content: '';
+  content: "";
   position: absolute;
   top: -0.25rem;
   bottom: -0.25rem;
   left: -1rem;
   width: 1px;
-  background: theme('colors.slate.200');
+  background: theme("colors.slate.200");
 
   @apply dark:bg-slate-700;
 }
@@ -80,7 +80,7 @@
 .DocSearch-Hit > a {
   position: relative;
   font-size: 0.875rem;
-  border-bottom: 1px solid theme('colors.slate.100');
+  border-bottom: 1px solid theme("colors.slate.100");
 
   @apply dark:border-slate-200/5;
 }
@@ -110,7 +110,7 @@
   appearance: none;
   background: transparent;
   font-size: 1rem;
-  color: theme('colors.slate.900');
+  color: theme("colors.slate.900");
   margin-left: 0.75rem;
   margin-right: 1rem;
   flex: auto;
@@ -167,12 +167,12 @@
 .DocSearch-Hit-source {
   line-height: 1.5rem;
   font-weight: 600;
-  color: theme('colors.slate.900');
+  color: theme("colors.slate.900");
   padding-top: 2.5rem;
   margin: 0 1.5rem 1rem;
 
   .dark & {
-    color: theme('colors.white');
+    color: theme("colors.white");
   }
 }
 
@@ -199,7 +199,7 @@
   margin-right: 1rem;
   width: 1.5rem;
   height: 1.5rem;
-  border-radius: theme('borderRadius.md');
+  border-radius: theme("borderRadius.md");
   /* hash icon */
   background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.75 1v10M8.25 1v10M1 3.75h10M1 8.25h10' stroke='%2394A3B8' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
@@ -230,19 +230,19 @@
   font-size: 0.75rem;
   line-height: 1.5rem;
   font-weight: 600;
-  color: theme('colors.slate.700');
-  background: theme('colors.slate.100');
+  color: theme("colors.slate.700");
+  background: theme("colors.slate.100");
   border-radius: 999px;
   padding: 0 0.375rem;
   @apply dark:bg-slate-700/50 dark:text-white;
 }
 
-.DocSearch-Hit[aria-selected='true'] .DocSearch-Hit-icon {
+.DocSearch-Hit[aria-selected="true"] .DocSearch-Hit-icon {
   @apply bg-transparent shadow-none ring-1 ring-white/30 dark:ring-white/20;
   background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.75 1v10M8.25 1v10M1 3.75h10M1 8.25h10' stroke='%23fff' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E");
 }
 
-.DocSearch-Hit[aria-selected='true'] .DocSearch-Hit--Parent .DocSearch-Hit-icon {
+.DocSearch-Hit[aria-selected="true"] .DocSearch-Hit--Parent .DocSearch-Hit-icon {
   /* book icon */
   background-image: url("data:image/svg+xml,%3Csvg width='14' height='10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M3.5 0c1.093 0 2.117.27 3 .743V10a6.344 6.344 0 0 0-3-.743c-1.093 0-2.617.27-3.5.743V.743C.883.27 2.407 0 3.5 0Z' fill='%23fff'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M10.5 0c1.093 0 2.617.27 3.5.743V10c-.883-.473-2.407-.743-3.5-.743s-2.117.27-3 .743V.743a6.344 6.344 0 0 1 3-.743Z' fill='%23fff'/%3E%3C/svg%3E");
 }
@@ -269,15 +269,15 @@
     background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
   }
 
-  [aria-selected='true'] & .DocSearch-Hit-action {
+  [aria-selected="true"] & .DocSearch-Hit-action {
     background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
   }
 
-  .DocSearch-Hit[aria-selected='true'] & .DocSearch-Hit-path {
+  .DocSearch-Hit[aria-selected="true"] & .DocSearch-Hit-path {
     @apply bg-sky-400 text-white dark:bg-sky-400/50;
   }
 
-  .DocSearch-Hit[aria-selected='true'] & .DocSearch-Hit-title {
+  .DocSearch-Hit[aria-selected="true"] & .DocSearch-Hit-title {
     @apply text-white;
   }
 }
@@ -295,7 +295,7 @@
   stroke: #71717a;
 }
 
-.DocSearch-Hit[aria-selected='true'] .DocSearch-Hit-action path {
+.DocSearch-Hit[aria-selected="true"] .DocSearch-Hit-action path {
   stroke: white;
 }
 
@@ -327,15 +327,15 @@
   @apply bg-slate-50 rounded-lg dark:bg-slate-700/30;
 }
 
-.DocSearch-Hit[aria-selected='true'] > a {
+.DocSearch-Hit[aria-selected="true"] > a {
   @apply bg-slate-50 dark:bg-slate-700/[0.16];
 }
 
-.DocSearch-Hit[aria-selected='true'] .DocSearch-Hit--Result {
+.DocSearch-Hit[aria-selected="true"] .DocSearch-Hit--Result {
   @apply bg-orange dark:bg-orange;
 }
 
-.DocSearch-Hit[aria-selected='true'] .DocSearch-Hit--Result .DocSearch-Hit-path {
+.DocSearch-Hit[aria-selected="true"] .DocSearch-Hit--Result .DocSearch-Hit-path {
   @apply bg-[#fd7e58];
 }
 
@@ -356,7 +356,7 @@
   @apply border-0;
 }
 
-.DocSearch-Hit[aria-selected='true'] mark {
+.DocSearch-Hit[aria-selected="true"] mark {
   color: inherit;
   border-bottom-color: currentColor;
 }
@@ -405,9 +405,9 @@
 
 .DocSearch-NoResults .DocSearch-Title {
   text-align: center;
-  color: theme('colors.slate.400');
+  color: theme("colors.slate.400");
   .dark & {
-    color: theme('colors.white');
+    color: theme("colors.white");
   }
 }
 
@@ -424,8 +424,8 @@
   display: block;
   width: 100%;
   text-align: left;
-  font-size: theme('fontSize.sm');
-  line-height: theme('lineHeight.6');
+  font-size: theme("fontSize.sm");
+  line-height: theme("lineHeight.6");
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11 9 3 3-3 3' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
@@ -456,7 +456,7 @@
   display: none;
 }
 
-.DocSearch-Hit-action [data-cy='fav-recent'] {
+.DocSearch-Hit-action [data-cy="fav-recent"] {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m12 5 2 5h5l-4 4 2 5-5-3-5 3 2-5-4-4h5l2-5Z' stroke='%23CBD5E1' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 
   .dark & {
@@ -464,11 +464,11 @@
   }
 }
 
-.DocSearch-Hit-action [data-cy='fav-recent']:hover {
+.DocSearch-Hit-action [data-cy="fav-recent"]:hover {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m12 5 2 5h5l-4 4 2 5-5-3-5 3 2-5-4-4h5l2-5Z' stroke='%230ea5e9' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
 
-.DocSearch-Hit-action [data-cy='remove-recent'] {
+.DocSearch-Hit-action [data-cy="remove-recent"] {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%2394A3B8' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 
   .dark & {
@@ -476,7 +476,7 @@
   }
 }
 
-.DocSearch-Hit-action [data-cy='remove-recent']:hover {
+.DocSearch-Hit-action [data-cy="remove-recent"]:hover {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 
   .dark & {
@@ -484,16 +484,16 @@
   }
 }
 
-.DocSearch-Hit-action [data-cy='remove-fav']::before {
+.DocSearch-Hit-action [data-cy="remove-fav"]::before {
   @apply absolute inset-0 content-[''] pointer-events-none bg-sky-50 dark:bg-slate-700/30;
 }
 
-.DocSearch-Hit[aria-selected='true'] [data-cy='remove-fav']::before {
+.DocSearch-Hit[aria-selected="true"] [data-cy="remove-fav"]::before {
   @apply bg-sky-100 dark:bg-slate-700/40;
 }
 
-.DocSearch-Hit-action [data-cy='remove-fav']::after {
-  content: '';
+.DocSearch-Hit-action [data-cy="remove-fav"]::after {
+  content: "";
   position: absolute;
   pointer-events: none;
   width: calc(4.5rem + 1px);
@@ -512,7 +512,7 @@
   }
 }
 
-.DocSearch-Hit-action [data-cy='remove-fav']:hover::after {
+.DocSearch-Hit-action [data-cy="remove-fav"]:hover::after {
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m12 5 2 5h5l-4 4 2 5-5-3-5 3 2-5-4-4h5l2-5Z' fill='%230EA5E9' stroke='%230EA5E9' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E"),
     url("data:image/svg+xml,%3Csvg width='1' height='1' fill='%23e2e8f0' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='1' height='1'/%3E%3C/svg%3E"),
     url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 7 7 17M7 7l10 10' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
