fix: use our "old" images component to render images, and enable lightbox

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -19,3 +19,34 @@ abbr[title] {
   margin-top: 25px !important;
   margin-bottom: 25px !important;
 }
+
+.image-container {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+  flex-direction: column;
+}
+
+.image-container img {
+  border-radius: 5px;
+  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.15);
+  border: 1px solid rgba(0, 0, 0, 0.15);
+}
+
+.image-container .caption {
+  margin-top: 10px;
+  text-align: center;
+}
+
+.image-container img.no-shadow,
+.image-container svg.no-shadow {
+  border-radius: 5px;
+  box-shadow: initial;
+  border: initial;
+}
+
+.image-container img.full-width,
+.image-container svg.full-width {
+  width: 100%;
+  height: 100%; /* needed for svg images */
+}
