chore: add changelog items

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,3 +10,15 @@
 @import "utilities.css";
 /* Add Lightbox styles */
 @import "react-image-lightbox/style.css";
+
+.webiny-gallery {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-top: 20px;
+}
+.webiny-gallery > .image-container {
+  padding: 0 20px;
+  flex-basis: 33%;
+  max-width: 300px;
+}
