fix: improve algolia search results (#543)

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,7 @@
 @import "base.css";
 
 /*! purgecss start ignore */
-@import "docsearch.css";
+@import "@docsearch/css";
 @import "prism.css";
 @import "bar-of-progress.css";
 /*! purgecss end ignore */
@@ -10,6 +10,10 @@
 @import "utilities.css";
 /* Add Lightbox styles */
 @import "react-image-lightbox/style.css";
+
+:root {
+  --docsearch-primary-color: #fa5a28;
+}
 
 .webiny-gallery {
   display: flex;
